# advent-of-code

./: LICENSE  main.py  pyproject.toml  remp.txt
aoc_2022/: challange_01.py
aoc_2023/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day13.py  day16.py  helpers.py
aoc_2024/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day13.py  day14.py  day15.py  day16.py  day18.py  day19.py  day24.py  day25.py  helpers.py  test.py
