[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Karsten Meichsner <ckmeichs@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"

[[tool.poetry.source]]
name = "iav-pypi"
url = "https://artifactory.iav.com/artifactory/api/pypi/pypi-remote/simple"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
